The logic for processing the entities user, restaurant, menu is completed
The processing logic is completed, tests are done, the menu entity model uses a collection of embeddable elements